--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
     background-color: aquamarine;
 }
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+p {
+    text-align: center;
+    font-size: 20px;
+}
+
+#image1 {
+    position: relative;
+}
